added grpc service for tools/tool
