# proto/pkg/api/tool/models.pb.go
@@ -1,0 +1,286 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.5
+// 	protoc        v3.21.12
+// source: api/tool/models.proto
+
+package tool
+
+import (
+	tool_type "github.com/PereverzevIvan/razrabotka-biznes-prilojenii-konditerskaya/proto/pkg/api/tool_type"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	timestamppb "google.golang.org/protobuf/types/known/timestamppb"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type Tool struct {
+	state          protoimpl.MessageState `protogen:"open.v1"`
+	Id             int32                  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	ToolTypeId     int32                  `protobuf:"varint,2,opt,name=tool_type_id,json=toolTypeId,proto3" json:"tool_type_id,omitempty"`
+	ToolType       *tool_type.ToolType    `protobuf:"bytes,3,opt,name=tool_type,json=toolType,proto3" json:"tool_type,omitempty"`
+	SupplierId     int32                  `protobuf:"varint,4,opt,name=supplier_id,json=supplierId,proto3" json:"supplier_id,omitempty"`
+	DegreeOfWearId int32                  `protobuf:"varint,6,opt,name=degree_of_wear_id,json=degreeOfWearId,proto3" json:"degree_of_wear_id,omitempty"`
+	DegreeOfWear   *DegreeOfWear          `protobuf:"bytes,7,opt,name=degree_of_wear,json=degreeOfWear,proto3,oneof" json:"degree_of_wear,omitempty"`
+	Name           string                 `protobuf:"bytes,8,opt,name=name,proto3" json:"name,omitempty"`
+	Description    *string                `protobuf:"bytes,9,opt,name=description,proto3,oneof" json:"description,omitempty"`
+	PurchaseDate   *timestamppb.Timestamp `protobuf:"bytes,10,opt,name=purchase_date,json=purchaseDate,proto3" json:"purchase_date,omitempty"`
+	unknownFields  protoimpl.UnknownFields
+	sizeCache      protoimpl.SizeCache
+}
+
+func (x *Tool) Reset() {
+	*x = Tool{}
+	mi := &file_api_tool_models_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *Tool) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*Tool) ProtoMessage() {}
+
+func (x *Tool) ProtoReflect() protoreflect.Message {
+	mi := &file_api_tool_models_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use Tool.ProtoReflect.Descriptor instead.
+func (*Tool) Descriptor() ([]byte, []int) {
+	return file_api_tool_models_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *Tool) GetId() int32 {
+	if x != nil {
+		return x.Id
+	}
+	return 0
+}
+
+func (x *Tool) GetToolTypeId() int32 {
+	if x != nil {
+		return x.ToolTypeId
+	}
+	return 0
+}
+
+func (x *Tool) GetToolType() *tool_type.ToolType {
+	if x != nil {
+		return x.ToolType
+	}
+	return nil
+}
+
+func (x *Tool) GetSupplierId() int32 {
+	if x != nil {
+		return x.SupplierId
+	}
+	return 0
+}
+
+func (x *Tool) GetDegreeOfWearId() int32 {
+	if x != nil {
+		return x.DegreeOfWearId
+	}
+	return 0
+}
+
+func (x *Tool) GetDegreeOfWear() *DegreeOfWear {
+	if x != nil {
+		return x.DegreeOfWear
+	}
+	return nil
+}
+
+func (x *Tool) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+func (x *Tool) GetDescription() string {
+	if x != nil && x.Description != nil {
+		return *x.Description
+	}
+	return ""
+}
+
+func (x *Tool) GetPurchaseDate() *timestamppb.Timestamp {
+	if x != nil {
+		return x.PurchaseDate
+	}
+	return nil
+}
+
+type DegreeOfWear struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Id            int32                  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	Name          string                 `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *DegreeOfWear) Reset() {
+	*x = DegreeOfWear{}
+	mi := &file_api_tool_models_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *DegreeOfWear) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*DegreeOfWear) ProtoMessage() {}
+
+func (x *DegreeOfWear) ProtoReflect() protoreflect.Message {
+	mi := &file_api_tool_models_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use DegreeOfWear.ProtoReflect.Descriptor instead.
+func (*DegreeOfWear) Descriptor() ([]byte, []int) {
+	return file_api_tool_models_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *DegreeOfWear) GetId() int32 {
+	if x != nil {
+		return x.Id
+	}
+	return 0
+}
+
+func (x *DegreeOfWear) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+var File_api_tool_models_proto protoreflect.FileDescriptor
+
+var file_api_tool_models_proto_rawDesc = string([]byte{
+	0x0a, 0x15, 0x61, 0x70, 0x69, 0x2f, 0x74, 0x6f, 0x6f, 0x6c, 0x2f, 0x6d, 0x6f, 0x64, 0x65, 0x6c,
+	0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x04, 0x74, 0x6f, 0x6f, 0x6c, 0x1a, 0x1a, 0x61,
+	0x70, 0x69, 0x2f, 0x74, 0x6f, 0x6f, 0x6c, 0x5f, 0x74, 0x79, 0x70, 0x65, 0x2f, 0x6d, 0x6f, 0x64,
+	0x65, 0x6c, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x1f, 0x67, 0x6f, 0x6f, 0x67, 0x6c,
+	0x65, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2f, 0x74, 0x69, 0x6d, 0x65, 0x73,
+	0x74, 0x61, 0x6d, 0x70, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x9a, 0x03, 0x0a, 0x04, 0x54,
+	0x6f, 0x6f, 0x6c, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x05, 0x52,
+	0x02, 0x69, 0x64, 0x12, 0x20, 0x0a, 0x0c, 0x74, 0x6f, 0x6f, 0x6c, 0x5f, 0x74, 0x79, 0x70, 0x65,
+	0x5f, 0x69, 0x64, 0x18, 0x02, 0x20, 0x01, 0x28, 0x05, 0x52, 0x0a, 0x74, 0x6f, 0x6f, 0x6c, 0x54,
+	0x79, 0x70, 0x65, 0x49, 0x64, 0x12, 0x30, 0x0a, 0x09, 0x74, 0x6f, 0x6f, 0x6c, 0x5f, 0x74, 0x79,
+	0x70, 0x65, 0x18, 0x03, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x13, 0x2e, 0x74, 0x6f, 0x6f, 0x6c, 0x5f,
+	0x74, 0x79, 0x70, 0x65, 0x2e, 0x54, 0x6f, 0x6f, 0x6c, 0x54, 0x79, 0x70, 0x65, 0x52, 0x08, 0x74,
+	0x6f, 0x6f, 0x6c, 0x54, 0x79, 0x70, 0x65, 0x12, 0x1f, 0x0a, 0x0b, 0x73, 0x75, 0x70, 0x70, 0x6c,
+	0x69, 0x65, 0x72, 0x5f, 0x69, 0x64, 0x18, 0x04, 0x20, 0x01, 0x28, 0x05, 0x52, 0x0a, 0x73, 0x75,
+	0x70, 0x70, 0x6c, 0x69, 0x65, 0x72, 0x49, 0x64, 0x12, 0x29, 0x0a, 0x11, 0x64, 0x65, 0x67, 0x72,
+	0x65, 0x65, 0x5f, 0x6f, 0x66, 0x5f, 0x77, 0x65, 0x61, 0x72, 0x5f, 0x69, 0x64, 0x18, 0x06, 0x20,
+	0x01, 0x28, 0x05, 0x52, 0x0e, 0x64, 0x65, 0x67, 0x72, 0x65, 0x65, 0x4f, 0x66, 0x57, 0x65, 0x61,
+	0x72, 0x49, 0x64, 0x12, 0x3d, 0x0a, 0x0e, 0x64, 0x65, 0x67, 0x72, 0x65, 0x65, 0x5f, 0x6f, 0x66,
+	0x5f, 0x77, 0x65, 0x61, 0x72, 0x18, 0x07, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x12, 0x2e, 0x74, 0x6f,
+	0x6f, 0x6c, 0x2e, 0x44, 0x65, 0x67, 0x72, 0x65, 0x65, 0x4f, 0x66, 0x57, 0x65, 0x61, 0x72, 0x48,
+	0x00, 0x52, 0x0c, 0x64, 0x65, 0x67, 0x72, 0x65, 0x65, 0x4f, 0x66, 0x57, 0x65, 0x61, 0x72, 0x88,
+	0x01, 0x01, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x08, 0x20, 0x01, 0x28, 0x09,
+	0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x25, 0x0a, 0x0b, 0x64, 0x65, 0x73, 0x63, 0x72, 0x69,
+	0x70, 0x74, 0x69, 0x6f, 0x6e, 0x18, 0x09, 0x20, 0x01, 0x28, 0x09, 0x48, 0x01, 0x52, 0x0b, 0x64,
+	0x65, 0x73, 0x63, 0x72, 0x69, 0x70, 0x74, 0x69, 0x6f, 0x6e, 0x88, 0x01, 0x01, 0x12, 0x3f, 0x0a,
+	0x0d, 0x70, 0x75, 0x72, 0x63, 0x68, 0x61, 0x73, 0x65, 0x5f, 0x64, 0x61, 0x74, 0x65, 0x18, 0x0a,
+	0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72,
+	0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70,
+	0x52, 0x0c, 0x70, 0x75, 0x72, 0x63, 0x68, 0x61, 0x73, 0x65, 0x44, 0x61, 0x74, 0x65, 0x42, 0x11,
+	0x0a, 0x0f, 0x5f, 0x64, 0x65, 0x67, 0x72, 0x65, 0x65, 0x5f, 0x6f, 0x66, 0x5f, 0x77, 0x65, 0x61,
+	0x72, 0x42, 0x0e, 0x0a, 0x0c, 0x5f, 0x64, 0x65, 0x73, 0x63, 0x72, 0x69, 0x70, 0x74, 0x69, 0x6f,
+	0x6e, 0x4a, 0x04, 0x08, 0x05, 0x10, 0x06, 0x22, 0x32, 0x0a, 0x0c, 0x44, 0x65, 0x67, 0x72, 0x65,
+	0x65, 0x4f, 0x66, 0x57, 0x65, 0x61, 0x72, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20,
+	0x01, 0x28, 0x05, 0x52, 0x02, 0x69, 0x64, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18,
+	0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x42, 0x5e, 0x5a, 0x5c, 0x67,
+	0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x50, 0x65, 0x72, 0x65, 0x76, 0x65,
+	0x72, 0x7a, 0x65, 0x76, 0x49, 0x76, 0x61, 0x6e, 0x2f, 0x72, 0x61, 0x7a, 0x72, 0x61, 0x62, 0x6f,
+	0x74, 0x6b, 0x61, 0x2d, 0x62, 0x69, 0x7a, 0x6e, 0x65, 0x73, 0x2d, 0x70, 0x72, 0x69, 0x6c, 0x6f,
+	0x6a, 0x65, 0x6e, 0x69, 0x69, 0x2d, 0x6b, 0x6f, 0x6e, 0x64, 0x69, 0x74, 0x65, 0x72, 0x73, 0x6b,
+	0x61, 0x79, 0x61, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x61, 0x70,
+	0x69, 0x2f, 0x74, 0x6f, 0x6f, 0x6c, 0x3b, 0x74, 0x6f, 0x6f, 0x6c, 0x62, 0x06, 0x70, 0x72, 0x6f,
+	0x74, 0x6f, 0x33,
+})
+
+var (
+	file_api_tool_models_proto_rawDescOnce sync.Once
+	file_api_tool_models_proto_rawDescData []byte
+)
+
+func file_api_tool_models_proto_rawDescGZIP() []byte {
+	file_api_tool_models_proto_rawDescOnce.Do(func() {
+		file_api_tool_models_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_api_tool_models_proto_rawDesc), len(file_api_tool_models_proto_rawDesc)))
+	})
+	return file_api_tool_models_proto_rawDescData
+}
+
+var file_api_tool_models_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_api_tool_models_proto_goTypes = []any{
+	(*Tool)(nil),                  // 0: tool.Tool
+	(*DegreeOfWear)(nil),          // 1: tool.DegreeOfWear
+	(*tool_type.ToolType)(nil),    // 2: tool_type.ToolType
+	(*timestamppb.Timestamp)(nil), // 3: google.protobuf.Timestamp
+}
+var file_api_tool_models_proto_depIdxs = []int32{
+	2, // 0: tool.Tool.tool_type:type_name -> tool_type.ToolType
+	1, // 1: tool.Tool.degree_of_wear:type_name -> tool.DegreeOfWear
+	3, // 2: tool.Tool.purchase_date:type_name -> google.protobuf.Timestamp
+	3, // [3:3] is the sub-list for method output_type
+	3, // [3:3] is the sub-list for method input_type
+	3, // [3:3] is the sub-list for extension type_name
+	3, // [3:3] is the sub-list for extension extendee
+	0, // [0:3] is the sub-list for field type_name
+}
+
+func init() { file_api_tool_models_proto_init() }
+func file_api_tool_models_proto_init() {
+	if File_api_tool_models_proto != nil {
+		return
+	}
+	file_api_tool_models_proto_msgTypes[0].OneofWrappers = []any{}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_api_tool_models_proto_rawDesc), len(file_api_tool_models_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_api_tool_models_proto_goTypes,
+		DependencyIndexes: file_api_tool_models_proto_depIdxs,
+		MessageInfos:      file_api_tool_models_proto_msgTypes,
+	}.Build()
+	File_api_tool_models_proto = out.File
+	file_api_tool_models_proto_goTypes = nil
+	file_api_tool_models_proto_depIdxs = nil
+}
