# proto/swagger/swagger.swagger.json
@@ -1,10 +1,13 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "api/tool_failure/models.proto",
+    "title": "api/tool/models.proto",
     "version": "version not set"
   },
   "tags": [
+    {
+      "name": "ToolService"
+    },
     {
       "name": "ToolFailureService"
     },
@@ -19,6 +22,125 @@
     "application/json"
   ],
   "paths": {
+    "/api/tool": {
+      "get": {
+        "operationId": "ToolService_GetAll",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/toolToolGetAllResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "sort",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "toolType",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "degreeOfWear",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "supplierId",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "name",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "ToolService"
+        ]
+      },
+      "post": {
+        "operationId": "ToolService_Add",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/toolToolAddResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "toolType",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "degreeOfWear",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "supplierId",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "name",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "description",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "purchaseDate",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "date-time"
+          }
+        ],
+        "tags": [
+          "ToolService"
+        ]
+      }
+    },
     "/api/tool-faillures": {
       "get": {
         "operationId": "ToolFailureService_GetAll",
@@ -209,6 +331,135 @@
           "ToolTypeService"
         ]
       }
+    },
+    "/api/tool/{id}": {
+      "get": {
+        "operationId": "ToolService_GetByID",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/toolToolGetByIDResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "tags": [
+          "ToolService"
+        ]
+      },
+      "delete": {
+        "operationId": "ToolService_Delete",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/toolToolDeleteResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "tags": [
+          "ToolService"
+        ]
+      },
+      "patch": {
+        "operationId": "ToolService_Edit",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/toolToolEditResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "toolType",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "degreeOfWear",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "supplierId",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "name",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "description",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "purchaseDate",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "date-time"
+          }
+        ],
+        "tags": [
+          "ToolService"
+        ]
+      }
     }
   },
   "definitions": {
@@ -237,6 +488,94 @@
             "type": "object",
             "$ref": "#/definitions/protobufAny"
           }
+        }
+      }
+    },
+    "toolDegreeOfWear": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "name": {
+          "type": "string"
+        }
+      }
+    },
+    "toolTool": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "toolTypeId": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "toolType": {
+          "$ref": "#/definitions/tool_typeToolType"
+        },
+        "supplierId": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "degreeOfWearId": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "degreeOfWear": {
+          "$ref": "#/definitions/toolDegreeOfWear"
+        },
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "purchaseDate": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
+    "toolToolAddResponse": {
+      "type": "object",
+      "properties": {
+        "tool": {
+          "$ref": "#/definitions/toolTool"
+        }
+      }
+    },
+    "toolToolDeleteResponse": {
+      "type": "object"
+    },
+    "toolToolEditResponse": {
+      "type": "object",
+      "properties": {
+        "tool": {
+          "$ref": "#/definitions/toolTool"
+        }
+      }
+    },
+    "toolToolGetAllResponse": {
+      "type": "object",
+      "properties": {
+        "tools": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/toolTool"
+          }
+        }
+      }
+    },
+    "toolToolGetByIDResponse": {
+      "type": "object",
+      "properties": {
+        "tool": {
+          "$ref": "#/definitions/toolTool"
         }
       }
     },
